src/test/ui/lifetimes/bare-trait-object.stderr
error[E0308]: mismatched types
  --> $DIR/bare-trait-object.rs:17:40
   |
LL |     let _: fn(&mut FnMut(&mut [u8])) = next_u32;
   |                                        ^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r mut (dyn for<'s> FnMut(&'s mut [u8]) + 'r))`
                 found fn item `for<'r> fn(&'r mut (dyn for<'r> FnMut(&'r mut [u8]) + 'r)) {next_u32}`

error[E0308]: mismatched types
  --> $DIR/bare-trait-object.rs:20:40
   |
LL |     let _: fn(&mut FnMut(&mut [u8])) = explicit;
   |                                        ^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r mut (dyn for<'s> FnMut(&'s mut [u8]) + 'r))`
                 found fn item `for<'r> fn(&'r mut (dyn for<'r> FnMut(&'r mut [u8]) + 'r)) {explicit}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
